Fix flipcards on firefox

--- a/assets/css/_sass/_flipcard.scss
+++ b/assets/css/_sass/_flipcard.scss
@@ -2,7 +2,7 @@
 .flip-card {
     background-color: transparent;
     width: 100%;
-    height: 200px;
+    height: 240px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
@@ -39,6 +39,7 @@
   /* Style the back side */
   .flip-card-back {
     background-color:white;
+    height: 100%;
     color: black;
     transform: rotateY(180deg);
   }
